@@ -24,18 +24,19 @@ configurations {
 repositories {
 	mavenCentral()
     maven { url 'https://frcmaven.wpi.edu/artifactory/release/' }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
 	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	
 	// JavaFX для GUI
 	implementation 'org.openjfx:javafx-controls:21'
 	implementation 'org.openjfx:javafx-fxml:21'
     implementation 'org.openjfx:javafx-base:21'
+    implementation 'org.openjfx:javafx-graphics:21'
 	
 	// DJL для YOLO
 	implementation 'ai.djl:api:0.31.1'
@@ -43,7 +44,7 @@ dependencies {
 	implementation 'ai.djl.pytorch:pytorch-native-cpu:1.13.1'
 	
 	// OpenCV для камеры
-    runtimeOnly 'edu.wpi.first.thirdparty.frc2025.opencv:opencv-java:4.10.0-3'
+    implementation 'edu.wpi.first.thirdparty.frc2025.opencv:opencv-java:4.10.0-3'
 	
 	// Математические операции
 	implementation 'org.apache.commons:commons-math3:3.6.1'
@@ -55,4 +56,17 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+task runJavaFX(type: JavaExec) {
+    group = 'application'
+    description = 'Запуск JavaFX приложения'
+    classpath = sourceSets.main.runtimeClasspath
+    mainClass = 'fs.mtuci.gestures.GestureControlApp'
+    jvmArgs = [
+        '--module-path', classpath.asPath,
+        '--add-modules', 'javafx.controls,javafx.fxml',
+        '--add-opens', 'java.base/sun.launcher=ALL-UNNAMED',
+        '-Djava.library.path=lib'
+    ]
 }
